name:                servestatic
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JustusAdam/servestatic#readme
license:             BSD3
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
copyright:           2015
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snap.Snaplet.DocumentServer
                     , Snap.Snaplet.ResourceServer
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , lens
                     , bytestring
                     , text
                     , filepath
                     , transformers
                     , directory
                     , unordered-containers
                     , pandoc
                     , blaze-html
                     , data-default
                     , extra
  default-language:    Haskell2010

executable servestatic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servestatic
                     , snap
  default-language:    Haskell2010

test-suite servestatic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servestatic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/servestatic
